--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p>This is the first file in my new Git Repo.</p>
 
 
-<p>This is an emmergency comment for master</p>
+<p>This is an emmergency comment for new em</p>
 
 
 </body>
